--- a/index.html
+++ b/index.html
@@ -165,11 +165,13 @@
         </div>
         <div class="content ">
             <p data-aos="fade-up " data-aos-duration="1000 " data-aos-delay="200 " style="color: white;text-align: center; "> This hands-on experience includes developing interactive user interfaces and implementing core application logic. These projects showcase the ability to handle the full development lifecycle, focusing on both client-side and server-side functionalities.</p>
-            <div class=" card " data-aos="fade-right " data-aos-duration="1000 " data-aos-delay="200 ">
-                <div class="card-img ">
-                    <img src="portfolio.jpg " alt=" ">
+            <a href="https://pushparajub.github.io/Portfolio/">
+                <div class=" card " data-aos="fade-right " data-aos-duration="1000 " data-aos-delay="200 ">
+                    <div class="card-img ">
+                        <img src="portfolio.jpg " alt=" ">
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="card " data-aos="fade-up " data-aos-duration="1000 " data-aos-delay="200 ">
                 <div class="card-img ">
                     <img src="loading.jpg" alt=" ">
@@ -236,15 +238,17 @@
                         </div>
                     </div>
                 </a>
-                <div class="card reveal ">
-                    <div class="contact-icon ">
-                        <i class="fas fa-globe "></i>
+                <a href="https://pushparajub.github.io/Portfolio/" class="demo">
+                    <div class="card reveal ">
+                        <div class="contact-icon ">
+                            <i class="fas fa-globe "></i>
+                        </div>
+                        <div class="info ">
+                            <h3>Website</h3>
+                            <span>Portfolio.com</span>
+                        </div>
                     </div>
-                    <div class="info ">
-                        <h3>Website</h3>
-                        <span>mywebsite.com</span>
-                    </div>
-                </div>
+                </a>
             </div>
             <div class="row ">
                 <div class="contact-form reveal ">
