--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="https://pushparajub.github.io/Portfolio/" class="demo">
+                <a href="https://pushparajub.github.io/Portfolio/" class="deco">
                     <div class="card reveal ">
                         <div class="contact-icon ">
                             <i class="fas fa-globe "></i>
