--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="mailto:your-email@gmail.com " class="deco">
+                <a href="mailto:pushparajub10@email.com" class="deco">
                     <div class="card reveal ">
                         <div class="contact-icon ">
                             <i class="fas fa-envelope "></i>
