--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 
     <header>
-        <a href="" class="brand" data-aos="zoom-in" data-aos-duration="1000">Adam</a>
+        <a href="" class="brand" data-aos="zoom-in" data-aos-duration="1000">Pushparaju</a>
         <div class="menu-btn"></div>
         <div class="navigation">
             <a href="#main" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">Home</a>
             <a href="#about" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">About</a>
-            <a href="#skills" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">Skills</a>
-            <a href="#services" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Services</a>
-            <a href="#work" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Work</a>
-            <a href="#" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">Contact</a>
+            <a href="#services" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300">Education</a>
+            <a href="#skills" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">Skills</a>
+            <a href="#work" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">Projects</a>
+            <a href="#contact" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600">Contact</a>
         </div>
     </header>
 
